ACS-12053 Fix double percent-encoding of Direct Access URL query