@@ -43,7 +43,6 @@ import java.io.OutputStream;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.file.Files;
 import java.util.UUID;
 import jakarta.servlet.http.HttpServletRequest;
@@ -193,21 +192,23 @@ public class FileManager
     {
         try
         {
-            URL url = new URL(directUrl);
-            String protocol = url.getProtocol();
+            // Parse without re-encoding so pre-signed URL query strings (e.g. S3/Azure) are
+            // forwarded verbatim. The 7-arg URI constructor would percent-encode the query,
+            // turning '%' into '%25' and invalidating any pre-computed signature (ACS-12053).
+            URI uri = new URI(directUrl);
+            String protocol = uri.getScheme();
             if ("http".equalsIgnoreCase(protocol) || "https".equalsIgnoreCase(protocol))
             {
-                String host = url.getHost();
+                String host = uri.getHost();
                 if (host == null || !host.matches("[A-Za-z0-9._\\-]+"))
                 {
                     throw new TransformException(BAD_REQUEST, "Direct Access Url host is not allowed.");
                 }
-                return new URI(protocol, null, host, url.getPort(),
-                        url.getPath(), url.getQuery(), null).toURL().openStream();
+                return uri.toURL().openStream();
             }
             if ("file".equalsIgnoreCase(protocol))
             {
-                File localFile = assertWithinTempDir(new File(url.toURI()));
+                File localFile = assertWithinTempDir(new File(uri));
                 return Files.newInputStream(localFile.toPath());
             }
             throw new TransformException(BAD_REQUEST, "Direct Access Url protocol is not allowed.");
